--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Vue.js Routing From Scratch Using Vue Router CDN</title>
+	<title>Obax</title>
 	<link rel="stylesheet" href="dist/bootstrap.min.css">
 	<link rel="stylesheet" href="style/main_style.css">
 	
